fix:some pass to file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Inter:wght@400;500;600;700&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Mulish:wght@200;300;400;500;600;700;800;900&family=Raleway:wght@400;500;600;700;800;900&family=Spectral:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
   <div class="container">
@@ -63,6 +63,6 @@
       <p class="popup__success-text">You have successfully registered.</p>
     </div>
   </div>
-  <script src="script.js" type="module"></script>
+  <script src="js/script.js" type="module"></script>
 </body>
 </html>
